plugins/editorconfig/testData/org/editorconfig/language/codeinsight/inspections/unexpectedChar/.editorconfig
[*]
property_with_form_feed_in_value = va<error descr="Expected a valid string character"></error>lue